--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>JerryG.org</title>
 </head>
 <body>
-This is a webpage
+     This is a webpage
+    <img src=/plank.jpg />
 </body>
 </html>
