--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>JerryG.org</title>
 </head>
 <body>
-     This is a webpage
+    <h1>This is a webpage<h1> 
+         <br />
     <img src=/plank.jpg />
 </body>
 </html>
