--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>JerryG.org</title>
 </head>
 <body>
-    <h1 text-align=center>This is a webpage<h1> 
+    <h1 style="text-align:center">This is a webpage<h1> 
          <br />
-    <img text-align=center src=/plank.jpg />
+    <img style="text-align:center" src=/plank.jpg />
 </body>
 </html>
