--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1 align="center">This is a webpage<h1> 
          <br />
-    <img align="center" src=/plank.jpg />
+    <img justify-content="center" src=/plank.jpg />
 </body>
 </html>
