--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>JerryG.org</title>
+    <link href="/style.css" rel="stylesheet" />
 </head>
 <body>
     <h1 align="center">This is a webpage<h1> 
