--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1 align="center">This is a webpage<h1> 
          <br />
-    <img display ="block" width="50%" src=/plank.jpg />
+    <img class="center" src=/plank.jpg />
 </body>
 </html>
