--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href="/style.css" rel="stylesheet" />
 </head>
 <body>
-    <h1 align="center">This is a webpage<h1> 
+    <h1 align="center">This is a webpage<h1>
+    <a align="center" href="JaredGlimpresume.docx">Download Current Resume<a>
          <br />
     <img class="center" src=/plank.jpg />
 </body>
