--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1 align="center">This is a webpage<h1>
-    <a align="center" href="JaredGlimpresume.docx">Download Current Resume<a>
+        <br />
+    <a align="center" href="JaredGlimpresume.docx" download>Download Current Resume<a>
          <br />
     <img class="center" src=/plank.jpg />
 </body>
