--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1 align="center">This is a webpage<h1>
         <br />
-    <a align="center" href="/JaredGlimpresume.docx" target="_blank" download="JaredGlimpResume.docx">Download Current Resume</a>
+    <a align="center" href="JaredGlimpResume.docx" target="_blank" download="JaredGlimpResume.docx">Download Current Resume</a>
          <br />
     <img class="center" src=/plank.jpg />
 </body>
