--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1 align="center">This is a webpage</h1>
         <br />
-    <h2 href="JaredGlimpResume.docx" target="_blank" download="JaredGlimpResume.docx">Download Current Resume</h2>
+    <a href="JaredGlimpResume.docx" target="_blank" download="JaredGlimpResume.docx">Download Current Resume</a>
          <br />
     <img class="center" src=/plank.jpg />
 </body>
