--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="/style.css" rel="stylesheet" />
 </head>
 <body>
-    <h1 align="center">This is a webpage</h1>
+    <h1 align="center">This is Jared Glimp's WebPage using AWS Continuous deployment</h1>
         <br />
     <a class="text_center" href="JaredGlimpResume.docx" target="_blank" download="JaredGlimpResume.docx">Download Current Resume</a>
          <br />
