--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1 align="center">This is Jared Glimp's WebPage using AWS Continuous deployment</h1>
         <br />
+    <h2 align="center">Ask me to edit on the fly</h2>
+        <br />
     <a class="text_center" href="JaredGlimpResume.docx" target="_blank" download="JaredGlimpResume.docx">Download Current Resume</a>
          <br />
     <img class="center" src=/plank.jpg />
